--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "jinrishici": "^1.0.6",
     "pinia": "^2.2.4",
     "sass": "^1.80.6",
@@ -27,6 +28,7 @@
     "typescript": "~5.6.0",
     "vite": "^5.4.10",
     "vite-plugin-vue-devtools": "^7.5.3",
+    "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue-tsc": "^2.1.6"
   }
 }
