--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "element-plus": "^2.8.7",
+    "html2canvas": "^1.4.1",
     "jinrishici": "^1.0.6",
+    "jspdf": "^2.5.2",
+    "layui": "^2.9.18",
     "pinia": "^2.2.4",
     "sass": "^1.80.6",
     "vue": "^3.5.12",
