--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "@kangc/v-md-editor": "^1.7.12",
     "axios": "^1.7.7",
     "element-plus": "^2.8.7",
     "html2canvas": "^1.4.1",
     "jinrishici": "^1.0.6",
     "jspdf": "^2.5.2",
     "layui": "^2.9.18",
+    "markdown-it": "^14.1.0",
+    "marked": "^13.0.3",
+    "nanoid": "^5.0.9",
     "pinia": "^2.2.4",
-    "sass": "^1.80.6",
+    "sass": "^1.32.13",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
@@ -31,6 +35,7 @@
     "npm-run-all2": "^7.0.1",
     "typescript": "~5.6.0",
     "vite": "^5.4.10",
+    "vite-plugin-md": "^0.21.5",
     "vite-plugin-vue-devtools": "^7.5.3",
     "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue-tsc": "^2.1.6"
